Changes to POMProperties and pom.properties. Also to the manual. Signed-off-by:Bradley Willcott <bw.opensource@yahoo.com>